--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.10.2",
     "cors": "^2.8.5",
+    "date-fns": "^3.4.0",
     "env": "^0.0.2",
     "express": "^4.18.3",
     "socket.io": "^4.7.4"
