--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
